--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,23 @@
 language: android
+android:
+  components:
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
+    - build-tools-23.0.1
+    # - tools
+    # Additional components
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-19
 env:
   matrix:
-    - ANDROID_SDKS=android-19,sysimg-19  ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
+    - ANDROID_SDKS=android-19,sysimg-19  ANDROID_TARGET=android-19,android-17  ANDROID_ABI=armeabi-v7a,x86
 before_install:
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
+  - adb wait-for-device
+  - adb shell input keyevent 82 &
 before_script:
   - ./ci/wait_for_emulator
   - adb shell input keyevent 82 &
