--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,5 @@ before_install:
 before_script:
   - ./ci/wait_for_emulator
   - adb shell input keyevent 82 &
+
+script: ./gradlew connectedAndroidTest
