--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ android:
     - addon-google_apis-google-19
 env:
   matrix:
-    - ANDROID_SDKS=android-19,sysimg-19  ANDROID_TARGET=android-19,android-17  ANDROID_ABI=armeabi-v7a,x86
+    - ANDROID_SDKS=android-19,sysimg-19  ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
 before_install:
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
-  - adb wait-for-device
+  - adb wait-for-emulator
   - adb shell input keyevent 82 &
 before_script:
   - ./ci/wait_for_emulator
