--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
 before_install:
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
-  - adb wait-for-emulator
+  - adb wait-for-device
   - adb shell input keyevent 82 &
 before_script:
   - ./ci/wait_for_emulator
